# gimo

./: .gitignore  Makefile.am  configure.ac  gimo-1.0.pc.in  gimo-1.0.spec.in
docs/: architecture.dia
src/: Makefile.am  gimo-archive.c  gimo-archive.h  gimo-binding.c  gimo-cfgelement.c  gimo-cfgelement.h  gimo-context.c  gimo-context.h  gimo-datastore.c  gimo-dlloader.c  gimo-dlloader.h  gimo-dlmodule.c  gimo-dlmodule.h  gimo-enums.c  gimo-enums.h  gimo-error.c  gimo-error.h  gimo-extconfig.c  gimo-extconfig.h  gimo-extension.c  gimo-extension.h  gimo-extpoint.c  gimo-extpoint.h  gimo-factory.c  gimo-import.c  gimo-import.h  gimo-intl.h  gimo-loadable.c  gimo-loadable.h  gimo-loader.c  gimo-loader.h  gimo-loadermgr.c  gimo-loadermgr.h  gimo-loaderset.c  gimo-loaderset.h  gimo-marshal.c  gimo-marshal.h  gimo-module.c  gimo-module.h  gimo-plugin.c  (+18 more)
src/plugins/: Makefile.am  gimo-jsmodule.c  gimo-jsmodule.h  gimo-pymodule.c  gimo-pymodule.h  gimo-xmlarchive.c  gimo-xmlarchive.h  jsmodule-1.0.xml  pymodule-1.0.xml
tests/: .gdbinit  Makefile.am  demo-archive1.xml  demo-archive2.xml  demo-plugin.c  demo-plugin.py  demo-plugin.xml  gimo.supp  sub-plugin.js  test-archive.c  test-archive.py  test-archive.xml  test-archive1.xml  test-archive2.xml  test-context  test-context.c  test-context.py  test-datastore.c  test-datastore.py  test-launch.py  test-loader.c  test-loader.py  test-module.c  test-module.py  test-plugin.c  test-plugin.js  test-plugin.py  test-pluginfo.c  test-pluginfo.py
tests/plugins/: plugin1.js  plugin1.xml  plugin2.py  plugin2.xml
tools/: Makefile.am  gimo-launch.c
win32/: Gimo.Cpp.props  config.h  demo-plugin.def  demo-plugin.vcxproj  generate-gi.py  gimo-launch.vcxproj  gimo.def  gimo.rc  gimo.sln  gimo.vcxproj  jsmodule-1.0.def  jsmodule-1.0.vcxproj  pymodule-1.0.def  pymodule-1.0.vcxproj  resource.h  test-archive.vcxproj  test-context.vcxproj  test-datastore.vcxproj  test-module.vcxproj  test-plugin.vcxproj
