SUBDIRS = src tools tests
DISTCHECK_CONFIGURE_FLAGS = --enable-introspection

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = gimo-1.0.pc

EXTRA_DIST = win32/config.h \
	win32/gimo.def \
	win32/jsmodule-1.0.vcxproj \
	win32/test-context.vcxproj \
	win32/demo-plugin.def \
	win32/gimo.rc \
	win32/pymodule-1.0.def \
	win32/test-module.vcxproj \
	win32/demo-plugin.vcxproj \
	win32/gimo.sln \
	win32/pymodule-1.0.vcxproj \
	win32/test-plugin.vcxproj \
	win32/generate-gi.py \
	win32/gimo.vcxproj \
	win32/resource.h \
	win32/Gimo.Cpp.props \
	win32/jsmodule-1.0.def \
	win32/test-archive.vcxproj
